--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,9 @@ a {
 }
 
 .noidung .info, .noidung .img-info {
-    width: 50%;
+    width: calc(50vw - 40px);
+    /* viewport-width là chiều rộng của trình duyệt */
+    /* Phần tử chiếm 50% của trình duyệt */
 }
 
 .noidung .info {
@@ -128,8 +130,8 @@ a {
 .noidung .info .sub-title {
     text-align: center;
     margin-top: 5px;
-    width: 300px;
-    height: 36px;
+    max-width: 300px;
+    height: 50px;
     font-size: 4.8rem;
     color: #ffffff;
     letter-spacing: 1px;
@@ -166,7 +168,7 @@ a {
     display: block;
     object-fit: cover;
     width: 100%;
-    height: 642px;
+    height: 660px;
 }
 
 /* noi dung 2 */
@@ -176,9 +178,8 @@ a {
     display: flex;
 }
 
-.noidung-2 .info-2,
-.noidung-2 .img-info-2 {
-    width: 50%;
+.noidung-2 .info-2, .noidung-2 .img-info-2 {
+    width: calc(50vw - 40px);
 }
 
 .noidung-2 .img-info-2 img {
@@ -242,9 +243,8 @@ a {
     display: flex;
 }
 
-.noidung-3 .info-3,
-.noidung-3 .img-info-3 {
-    width: 50%;
+.noidung-3 .info-3, .noidung-3 .img-info-3 {
+    width: calc(50vw - 40px);
 }
 
 .noidung-3 .img-info-3 img {
@@ -308,9 +308,8 @@ a {
     display: flex;
 }
 
-.noidung-4 .info-4,
-.noidung-4 .img-info-4 {
-    width: 50%;
+.noidung-4 .info-4, .noidung-4 .img-info-4 {
+    width: calc(50vw - 40px);
 }
 
 .noidung-4 .img-info-4 img {
@@ -374,9 +373,8 @@ a {
     display: flex;
 }
 
-.noidung-5 .info-5,
-.noidung-5 .img-info-5 {
-    width: 50%;
+.noidung-5 .info-5, .noidung-5 .img-info-5 {
+    width: calc(50vw - 40px);
 }
 
 .noidung-5 .img-info-5 img {
@@ -441,9 +439,8 @@ a {
     display: flex;
 }
 
-.noidung-6 .info-6,
-.noidung-6 .img-info-6 {
-    width: 50%;
+.noidung-6 .info-6, .noidung-6 .img-info-6 {
+    width: calc(50vw - 40px);
 }
 
 .noidung-6 .img-info-6 img {
