--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,10 +37,15 @@ a {
 
 /* HEADER */
 .header {
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1;
     height: 100px;
     padding: 25px 0;
+    background-color: #fff;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
 }
+
 .header .navbar {
     display: flex;
     align-items: center;
@@ -59,6 +64,7 @@ a {
 .header .navbar .list li {
     margin: 0px 15px;
     transition: 0.3s color;
+    font-weight: 500;
 }
 
 .header .navbar .list li:hover {
@@ -100,6 +106,7 @@ a {
     display: flex;
     align-items: center;
     margin-right: 25px;
+    font-weight: 500;
 }
 
 .header .location_login .local .icon {
