--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,7 +489,7 @@ a {
     text-decoration: underline;
 }
 
-.footer-logo .desc {
+.footer-logo .desc-footer {
     margin-top: 30px;
     font-size: 1.6rem;
     color: #00000094;
