--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,7 +431,7 @@ a {
     gap: 20px;
 }
 
-.Service .row .sub-title {
+.Service .row .subtitle {
     font-weight: normal;
     font-size: 1.8rem;
 }
